--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -141,6 +141,7 @@
     - NotekeeperCartridge
     - NewsReaderCartridge
     - BountyContractsCartridge # Frontier
+    - NanoChatCartridge # DeltaV
     - AstroNavCartridge # Frontier
     - WantedListCartridge
 
