--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
@@ -45,7 +45,7 @@
     price: 240
 
 - type: entity
-  name: lucky 37
+  name: Lucky 37
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverLucky
   description: Luck always beats skill, ya weasel. Uses .45 ammo.
