--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
@@ -22,7 +22,7 @@
     price: 340
 
 - type: entity
-  name: faith
+  name: Faith
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverFaith
   description: Delivers blessings in bullet form. Uses .45 ammo.
