--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
@@ -1,5 +1,5 @@
 - type: entity
-  name: fitz special
+  name: Fitz Special
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverFitz
   description: A compact and concealable self defence snub revolver. Uses .45 ammo.
