--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
@@ -41,7 +41,7 @@
       gun_chamber: !type:ContainerSlot
 
 - type: entity
-  name: pollock
+  name: Pollock
   parent: [BaseWeaponPistol, BaseC1Contraband]
   id: WeaponPistolPollock
   description: A compact and mass-produced combat pistol. Uses .35 auto ammo.
