--- a/Resources/Prototypes/_NF/Recipes/Lathes/chemistry.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/chemistry.yml
@@ -6,6 +6,11 @@
     Glass: 50
 
 - type: latheRecipe
+  id: JugBluespace
+  result: JugBluespace
+  parent: BluespaceBeaker # same size, 1:1 recipe
+
+- type: latheRecipe
   id: VialBluespace
   result: VialBluespace
   completetime: 2
@@ -20,6 +25,6 @@
   id: BlankMediPen
   result: BlankMediPen
   completetime: 2
-  materials:    
+  materials:
     Plastic: 25
     Steel: 25
