Missing bluespace jug recipes, fix anomalous icon

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -360,6 +360,7 @@
       - HolofanProjector
       - BluespaceBeaker
       - SyringeBluespace
+      - JugBluespace # Frontier
       - VialBluespace # Frontier
       - Jug
       - WeaponCrusher
@@ -1035,6 +1036,7 @@
       - ChemicalPayload
       - CryostasisBeaker
       - BluespaceBeaker
+      - JugBluespace # Frontier
       - SyringeBluespace
       - Jug
       - SyringeCryostasis
