Update launch.json to original

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -56,7 +56,7 @@
             "name": "Server/Client (Release)",
             "configurations": [
                 "Server",
-                "Client (Compatibility renderer)"
+                "Client"
             ],
             "preLaunchTask": "build-release"
         }
