--- a/Resources/Maps/_NF/Dungeon/cave_factory.yml
+++ b/Resources/Maps/_NF/Dungeon/cave_factory.yml
@@ -10834,7 +10834,7 @@ entities:
     - type: Transform
       pos: 1.5,48.5
       parent: 1
-- proto: RandomItem
+- proto: SalvageSpawnerTreasure
   entities:
   - uid: 347
     components:
@@ -11131,13 +11131,6 @@ entities:
     components:
     - type: Transform
       pos: 26.5,32.5
-      parent: 1
-- proto: SchoolgirlUniformSpawner
-  entities:
-  - uid: 548
-    components:
-    - type: Transform
-      pos: 14.5,34.5
       parent: 1
 - proto: ShardGlass
   entities:
