make the shuttles compatible with MapRenderer

--- a/Resources/Maps/_NF/Shuttles/Sr/chauffeur.yml
+++ b/Resources/Maps/_NF/Shuttles/Sr/chauffeur.yml
@@ -17,7 +17,7 @@ entities:
   - uid: 2
     components:
     - type: MetaData
-      name: PTS
+      name: Chauffeur
     - type: Transform
       pos: -0.47916666,-0.5364844
       parent: invalid
@@ -285,7 +285,7 @@ entities:
     - type: GasTileOverlay
     - type: RadiationGridResistance
     - type: BecomesStation
-      id: PTS
+      id: Chauffeur
 - proto: AirlockCommandGlass
   entities:
   - uid: 150
