Port researchable syringe gun (DeltaV#2169, DeltaV#2249) (#2528)
* Add the syringe gun as research (#2169)

* Tech added

* Added recipes and made printable

* Tech added

* Added recipes and made printable

* Should solve the conflict

* Should solve the merge conflict

* Emagged protolathe

* Nerf "mini" syringes (#2249)

Update chemistry.yml

* Nerf "mini" syringes

* Force transfer, max transfer amount to 5u

* 0.5u on collide, 0.5u per injection, 2s per inject

---------

Co-authored-by: Radezolid <snappednexus@gmail.com>
Co-authored-by: Stop-Signs <stopsign221@gmail.com>
Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -449,6 +449,10 @@
       - WeaponXrayCannon
       - SpeedLoaderRifleHeavyIncendiary # Frontier
       - SpeedLoaderRifleHeavyUranium # Frontier
+      # Begin DeltaV additions
+      - LauncherSyringe
+      - MiniSyringe
+      # End DeltaV additions
 
 - type: entity
   id: ProtolatheHyperConvection
@@ -1032,7 +1036,6 @@
       - BlankMediPen # Frontier
       - MedicalAppraisalTool # Frontier
     dynamicRecipes:
-      - VialBluespace # Frontier
       - ChemicalPayload
       - CryostasisBeaker
       - BluespaceBeaker
@@ -1040,7 +1043,12 @@
       - SyringeBluespace
       - Jug
       - SyringeCryostasis
+      - VialBluespace # Frontier
       - ClothingOuterHardsuitMedical # Frontier
+      # Begin DeltaV additions
+      - LauncherSyringe
+      - MiniSyringe
+      # End DeltaV additions
   - type: Machine
     board: MedicalTechFabCircuitboard
   - type: StealTarget
