Gas Filter Default Option

--- a/Resources/Maps/_NF/Shuttles/Nfsd/corsair.yml
+++ b/Resources/Maps/_NF/Shuttles/Nfsd/corsair.yml
@@ -2298,6 +2298,8 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,9.5
       parent: 1
+    - type: GasFilter
+      filteredGas: CarbonDioxide
     - type: AtmosPipeColor
       color: '#990000FF'
 - proto: GasMixerOn
