--- a/Resources/Prototypes/_NF/Shipyard/Nfsd/corsair.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Nfsd/corsair.yml
@@ -1,7 +1,7 @@
 - type: vessel
   id: Corsair
   name: NSF Corsair
-  description: Micro support vessel used for emergency rescues and first aid.
+  description: Medium Medical Support Vessel for the NFSD, Designed for Cryo Deployment in the Field.
   price: 60000 #Appraisal is 48680
   category: Medium
   group: Security
