--- a/Resources/Prototypes/_NF/Entities/Objects/Vehicles/vehicles.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Vehicles/vehicles.yml
@@ -183,6 +183,129 @@
           params:
             volume: -3
 
+# Enhanced version of the vanilla Janicart that adds a bucket and mop slot.
+- type: entity
+  id: VehicleJanicartNF
+  parent: BaseVehicleRideable
+  name: janicart
+  description: The janitor's trusty steed.
+  components:
+  - type: Vehicle
+    southOver: true
+    westOver: true
+    eastOver: true
+    northOverride: -0.15
+    southOverride: 0.22
+  - type: Sprite
+    sprite: Objects/Vehicles/janicart.rsi
+    layers:
+    - state: vehicle
+      map: ["enum.VehicleVisualLayers.AutoAnimate"]
+    noRot: true
+  - type: UnpoweredFlashlight
+  - type: PointLight
+    enabled: false
+    radius: 3.5
+    softness: 2
+    mask: /Textures/Effects/LightMasks/cone.png
+    autoRot: true
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 500
+      behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 250
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalGlassBreak
+      - !type:ExplodeBehavior
+      - !type:SpawnEntitiesBehavior # in future should also emit a cloud of hot gas
+        spawn:
+          VehicleJanicartDestroyed:
+            min: 1
+            max: 1
+    - trigger:
+        !type:DamageTrigger
+        damage: 200
+      behaviors:
+      - !type:EmptyAllContainersBehaviour
+  - type: ItemSlots
+    slots:
+      mop_slot:
+        name: janitorial-trolley-slot-component-slot-name-mop
+        whitelist:
+          tags:
+            - Mop
+        insertOnInteract: false # or it conflicts with bucket logic
+        priority: 9 # Higher than bucket slot
+      bucket_slot:
+        name: janitorial-trolley-slot-component-slot-name-bucket
+        whitelist:
+          tags:
+            - Bucket
+        insertOnInteract: false # or it also conflicts with bucket logic
+        priority: 4 # Higher than trash bag slot
+      key_slot:
+        name: vehicle-slot-component-slot-name-keys
+        whitelist:
+          requireAll: true
+          tags:
+          - VehicleKey
+          - JanicartKeys
+        insertSound:
+          path: /Audio/Effects/Vehicle/vehiclestartup.ogg
+          params:
+            volume: -3
+      trashbag_slot:
+        name: janitorial-trolley-slot-component-slot-name-trashbag
+        whitelist:
+          tags:
+            - TrashBag
+  - type: ItemMapper
+    mapLayers:
+      storage:
+        whitelist:
+          tags:
+            - TrashBag
+    sprite: Objects/Vehicles/janicart.rsi
+  - type: Appearance
+  - type: Spillable
+    solution: bucket
+    spillDelay: 3.0
+    spillWhenThrown: false
+  - type: SolutionContainerManager
+    solutions:
+      bucket:
+        maxVol: 800
+        reagents:
+          - ReagentId: Water
+            Quantity: 800
+  - type: DrainableSolution
+    solution: bucket
+  - type: RefillableSolution
+    solution: bucket
+  - type: ExaminableSolution
+    solution: bucket
+  - type: Tag
+    tags:
+      - Wringer
+  - type: Drink
+    solution: bucket
+  - type: ContainerContainer
+    containers:
+      storagebase: !type:Container
+        ents: []
+      mop_slot: !type:ContainerSlot {}
+      bucket_slot: !type:ContainerSlot {}
+
 # Mail carrier
 - type: entity
   parent: VehicleSkeletonMotorcycleNF
