--- a/Resources/Prototypes/_NF/Procedural/basalt_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/basalt_vgroid.yml
@@ -242,6 +242,18 @@
     groups:
     - id: SpawnMobMercenaryT2
       amount: 1
+  - !type:MobsDunGen
+    minCount: 1
+    maxCount: 3
+    groups:
+    - id: SpawnMobMercenaryT3
+      amount: 1
+  - !type:MobsDunGen
+    minCount: 1
+    maxCount: 3
+    groups:
+    - id: SpawnMobMercenaryCaptain
+      amount: 1
 
 #- type: dungeonConfig
 #  id: NFVGRoidInteriorDungeonsBasalt
