--- a/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
@@ -242,6 +242,12 @@
     groups:
     - id: SpawnMobExplorerT2
       amount: 1
+  - !type:MobsDunGen
+    minCount: 1
+    maxCount: 1
+    groups:
+    - id: SpawnMobExplorerBoss # Boss
+      amount: 1
 
 #- type: dungeonConfig
 #  id: NFVGRoidInteriorDungeonsCave
