--- a/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/scrap_vgroid.yml
@@ -144,6 +144,13 @@
       entity: SpawnMobRogueScapT1
       count: 25
       minGroupSize: 1
+      maxGroupSize: 2
+    - !type:OreDunGen
+      tileMask:
+      - Plating
+      entity: SpawnMobRogueDronesT1
+      count: 15
+      minGroupSize: 1
       maxGroupSize: 1
 
 # Configs
@@ -244,6 +251,12 @@
     maxCount: 2
     groups:
     - id: SpawnMobRogueSiliconsT2
+      amount: 1
+  - !type:MobsDunGen
+    minCount: 1
+    maxCount: 1
+    groups:
+    - id: SpawnMobRogueSiliconBossRandom
       amount: 1
 
 #- type: dungeonConfig
