--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -51,12 +51,12 @@
     whitelists:
       Rooms:
         tags:
-        - CaveFactory
-        - LavaBrig
-        - LavaMercenary
-        - SalvageExperiment
-        - VirologyLab
-        - SalvageOutpost
+        - NFCaveFactory
+        - NFLavaBrig
+        - NFLavaMercenary
+        - NFSalvageExperiment
+        - NFVirologyLab
+        - NFSalvageOutpost
 
 - type: entitySpawnEntry
   id: BaseClutterNF
@@ -103,7 +103,7 @@
     whitelists:
       Rooms:
         tags:
-          - CaveFactory
+          - NFCaveFactory
 
   layers:
   - !type:PrototypeDunGen
@@ -148,7 +148,7 @@
     whitelists:
       Rooms:
         tags:
-          - SalvageExperiment
+          - NFSalvageExperiment
 
   layers:
   - !type:PrototypeDunGen
@@ -176,7 +176,7 @@
     whitelists:
       Rooms:
         tags:
-          - CaveFactory
+          - NFCaveFactory
   layers:
   - !type:PrototypeDunGen
     proto: Everything
@@ -201,7 +201,7 @@
     whitelists:
       Rooms:
         tags:
-          - LavaMercenary
+          - NFLavaMercenary
   layers:
   - !type:PrototypeDunGen
     proto: Everything
@@ -253,7 +253,7 @@
     whitelists:
       Rooms:
         tags:
-          - VirologyLab
+          - NFVirologyLab
 
   layers:
   - !type:PrototypeDunGen
@@ -298,7 +298,7 @@
     whitelists:
       Rooms:
         tags:
-          - SalvageOutpost
+          - NFSalvageOutpost
   layers:
   - !type:PrototypeDunGen
     proto: Everything
