--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -40,12 +40,12 @@
       CornerWalls: WallReinforced
       Walls: WallSolid
     spawnGroups:
-      CornerClutter: BaseClutterNF
-      Entrance: BaseAirlockNF
-      EntranceFlank: BaseWindowNF
-      Junction: BaseAirlockNF
-      WallMounts: BaseWallMountsNF
-      Window: BaseWindowNF
+      CornerClutter: NFBaseClutterNF
+      Entrance: NFBaseAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
+      WallMounts: NFBaseWallMounts
+      Window: NFBaseWindow
     tiles:
       FallbackTile: FloorSteel
     whitelists:
@@ -53,31 +53,31 @@
         tags:
         - NFCaveFactory
         - NFLavaBrig
-        - NFLavaMercenary
+        - NFNFLavaMercenary
         - NFSalvageExperiment
         - NFVirologyLab
-        - NFSalvageOutpost
+        - NFNFSalvageOutpost
 
 - type: entitySpawnEntry
-  id: BaseClutterNF
+  id: NFBaseClutterNF
   entries:
   - id: PottedPlantRandom
     amount: 1
 
 - type: entitySpawnEntry
-  id: BaseAirlockNF
+  id: NFBaseAirlock
   entries:
   - id: CableApcExtension
   - id: AirlockGlassDungeon
 
 - type: entitySpawnEntry
-  id: BaseWindowNF
+  id: NFBaseWindow
   entries:
   - id: GrilleDungeon
   - id: WindowDungeon
 
 - type: entitySpawnEntry
-  id: BaseWallMountsNF
+  id: NFBaseWallMounts
   entries:
     # Posters
     - id: RandomPosterLegit
@@ -94,12 +94,12 @@
 
 # CaveFactory prototypes
 - type: dungeonConfig
-  id: CaveFactory
+  id: NFCaveFactory
   data:
     colors:
       Decals: "#ffa64d96"
     spawnGroups:
-      WallMounts: CaveFactoryWallMountsNF
+      WallMounts: NFCaveFactoryWallMounts
     whitelists:
       Rooms:
         tags:
@@ -127,7 +127,7 @@
       NorthEast: BrickTileWhiteInnerNe
 
 - type: entitySpawnEntry
-  id: CaveFactoryWallMountsNF
+  id: NFCaveFactoryWallMounts
   entries:
     # Posters
     - id: RandomPosterLegit
@@ -141,10 +141,10 @@
 
 # MedSci prototypes
 - type: dungeonConfig
-  id: MedSci
+  id: NFMedSci
   data:
     spawnGroups:
-      WallMounts: MedSciWallMountsNF
+      WallMounts: NFMedSciWallMounts
     whitelists:
       Rooms:
         tags:
@@ -155,7 +155,7 @@
     proto: Everything
 
 - type: entitySpawnEntry
-  id: MedSciWallMountsNF
+  id: NFMedSciWallMounts
   entries:
     - id: RandomPosterLegit
       orGroup: content
@@ -171,7 +171,7 @@
 
 # FactoryDorms prototypes
 - type: dungeonConfig
-  id: FactoryDorms
+  id: NFFactoryDorms
   data:
     whitelists:
       Rooms:
@@ -181,9 +181,9 @@
   - !type:PrototypeDunGen
     proto: Everything
 
-# LavaMercenary prototypes
+# NFLavaMercenary prototypes
 - type: dungeonConfig
-  id: LavaMercenary
+  id: NFLavaMercenary
   data:
     colors:
       Decals: "#5E7C16"
@@ -192,12 +192,12 @@
       CornerWalls: WallReinforced
       Walls: WallSolid
     spawnGroups:
-      CornerClutter: BaseClutter
-      Entrance: MercenaryAirlockNF
-      EntranceFlank: BaseWindow
-      Junction: MercenaryAirlockNF
-      WallMounts: LavaMercenaryWallMountsNF
-      Window: BaseWindow
+      CornerClutter: NFBaseClutter
+      Entrance: NFMercenaryAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFMercenaryAirlock
+      WallMounts: NFLavaMercenaryWallMounts
+      Window: NFBaseWindow
     whitelists:
       Rooms:
         tags:
@@ -224,13 +224,13 @@
       NorthEast: BrickTileWhiteInnerNe
 
 - type: entitySpawnEntry
-  id: MercenaryAirlockNF
+  id: NFMercenaryAirlock
   entries:
     - id: CableApcExtension
     - id: AirlockMercenaryGlassDungeon
 
 - type: entitySpawnEntry
-  id: LavaMercenaryWallMountsNF
+  id: NFLavaMercenaryWallMounts
   entries:
     # Posters
     - id: RandomPosterContraband
@@ -282,9 +282,9 @@
     - id: CableApcExtension
     - id: AirlockVirologyGlassDungeon
 
-# SalvageOutpost prototypes
+# NFSalvageOutpost prototypes
 - type: dungeonConfig
-  id: SalvageOutpost
+  id: NFSalvageOutpost
   data:
     colors:
       Decals: "#9A54BF"
@@ -292,9 +292,9 @@
       CornerWalls: WallMining
       Walls: WallMining
     spawnGroups:
-      Entrance: MiningAirlockNF
-      EntranceFlank: MiningWindowNF
-      Window: MiningWindowNF
+      Entrance: NFMiningAirlock
+      EntranceFlank: NFMiningWindow
+      Window: NFMiningWindow
     whitelists:
       Rooms:
         tags:
@@ -321,20 +321,20 @@
       NorthEast: BrickTileWhiteInnerNe
 
 - type: entitySpawnEntry
-  id: MiningAirlockNF
+  id: NFMiningAirlock
   entries:
     - id: CableApcExtension
     - id: AirlockMiningGlassDungeon
 
 - type: entitySpawnEntry
-  id: MiningWindowNF
+  id: NFMiningWindow
   entries:
     - id: GrilleDungeon
     - id: MiningWindowDungeon
 
 ## Wallmounts
 - type: entitySpawnEntry
-  id: NanoTrasenFacilityWallmounts
+  id: NFNanoTrasenFacilityWallmounts
   entries:
   - id: RandomPosterLegit
     orGroup: content
@@ -346,4 +346,232 @@
     orGroup: content
   - id: DefibrillatorCabinetFilled
     prob: 0.05
+    orGroup: content
+
+
+# Wizden edited: Base configs
+
+# Setups
+- type: dungeonConfig
+  id: NFExperiment
+  data:
+    colors:
+      Decals: "#D381C996"
+    entities:
+      Cabling: CableApcExtension
+      CornerWalls: WallReinforced
+      Walls: WallSolid
+    spawnGroups:
+      CornerClutter: NFBaseClutter
+      Entrance: NFBaseAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
+      WallMounts: NFScienceLabsWalls
+      Window: NFBaseWindow
+    tiles:
+      FallbackTile: FloorSteel
+    whitelists:
+      Rooms:
+        tags:
+        - NFSalvageExperiment
+  layers:
+  - !type:PrototypeDunGen
+    proto: PlanetBase
+
+- type: dungeonConfig
+  id: NFHaunted
+  data:
+    entities:
+      Walls: WallRock
+    tiles:
+      FallbackTile: FloorCaveDrought
+    whitelists:
+      Rooms:
+        tags:
+        - NFMineshaft
+  layers:
+  - !type:PrefabDunGen
+    presets:
+    - Bucket
+    - Wow
+    - SpaceShip
+    - Tall
+
+  - !type:WormCorridorDunGen
+    width: 3
+
+  - !type:CorridorClutterDunGen
+    contents:
+    - id: FloraStalagmite1
+    - id: FloraStalagmite2
+    - id: FloraStalagmite3
+    - id: FloraStalagmite4
+    - id: FloraStalagmite5
+    - id: FloraStalagmite6
+
+  - !type:BoundaryWallDunGen
+
+- type: dungeonConfig
+  id: NFLavaBrig
+  data:
+    colors:
+      Decals: "#DE3A3A96"
+    entities:
+      Cabling: CableApcExtension
+      CornerWalls: WallReinforced
+      Walls: WallSolid
+    spawnGroups:
+      CornerClutter: NFBaseClutter
+      Entrance: NFLavaBrigEntrance
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
+      WallMounts: NFNanoTrasenFacilityWallmounts # Frontier: NFScienceLabsWalls<NFNanoTrasenFacilityWallmounts
+      Window: NFBaseWindow
+    tiles:
+      FallbackTile: FloorDark
+    whitelists:
+      Rooms:
+        tags:
+        - NFLavaBrig
+  layers:
+  - !type:PrototypeDunGen
+    proto: Everything # Frontier: PlanetBase<Everything
+
+- type: dungeonConfig
+  id: NFMineshaft
+  data:
+    entities:
+      Walls: WallRock # Frontier: enclose the mineshaft in rock
+      CornerWalls: WallRock # Frontier: CornerWalls: WallRock
+      Cabling: Catwalk
+    spawnGroups:
+      CornerClutter: NFMineshaftClutter
+      Entrance: NFBaseWoodWall
+      EntranceFlank: NFBaseWoodWall
+      Junction: NFBaseWoodSupport
+      WallMounts: NFNanoTrasenFacilityWallmounts
+      Window: NFBaseWoodWall
+    tiles:
+      FallbackTile: FloorCaveDrought
+    whitelists:
+      Rooms:
+        tags:
+        - NFMineshaft
+  layers:
+  - !type:PrototypeDunGen
+    proto: Everything # Frontier: PlanetBase<Everything
+
+- type: dungeonConfig
+  id: NFSnowyLabs
+  data:
+    colors:
+      Decals: "#4cc7aa96"
+    entities:
+      Cabling: CableApcExtension
+      CornerWalls: WallSilver
+      Walls: WallSilver
+    spawnGroups:
+      CornerClutter: NFBaseClutter
+      Entrance: NFSnowyLabsEntrance
+      EntranceFlank: NFBaseWindow
+      Junction: NFBaseAirlock
+      WallMounts: NFSnowyLabsWalls
+      Window: NFBaseWindow
+    tiles:
+      FallbackTile: FloorSteel
+    whitelists:
+      Rooms:
+        tags:
+        - NFSnowyLabs
+  layers:
+  - !type:PrototypeDunGen
+    proto: PlanetBase
+
+# Spawn groups
+# Basic
+- type: entitySpawnEntry
+  id: NFBaseClutter
+  entries:
+  - id: PottedPlantRandom
+    amount: 1
+
+# Lava brig
+- type: entitySpawnEntry
+  id: NFLavaBrigEntrance
+  entries:
+  - id: CableApcExtension
+  - id: AirlockSecurityGlassDungeon
+
+# Mineshaft
+- type: entitySpawnEntry
+  id: NFBaseWoodWall
+  entries:
+  - id: RandomWoodenWall
+
+- type: entitySpawnEntry
+  id: NFBaseWoodSupport
+  entries:
+  - id: RandomWoodenSupport
+
+- type: entitySpawnEntry
+  id: NFMineshaftClutter
+  entries:
+  - id: RandomStalagmiteOrCrystal
+    amount: 1
+
+- type: entitySpawnEntry
+  id: NFMineshaftWalls
+  entries:
+  # Ore
+  - id: WallRockSalt
+    prob: 0.6
+    orGroup: content
+  - id: WallRockCoal
+    prob: 0.6
+    orGroup: content
+  - id: WallRockTin
+    prob: 0.4
+    orGroup: content
+  - id: WallMining
+    prob: 0.8
+    orGroup: content
+
+# Science lab
+- type: entitySpawnEntry
+  id: NFScienceLabsWalls
+  entries:
+  # Posters
+  - id: RandomPosterLegit
+    orGroup: content
+  - id: ExtinguisherCabinetFilled
+    prob: 0.2
+    orGroup: content
+  - id: RandomPainting
+    prob: 0.05
+    orGroup: content
+  - id: IntercomCommon
+    prob: 0.1
+    orGroup: content
+
+# Snowy labs
+- type: entitySpawnEntry
+  id: NFSnowyLabsEntrance
+  entries:
+  - id: CableApcExtension
+  - id: AirlockFreezer
+
+- type: entitySpawnEntry
+  id: NFSnowyLabsWalls
+  entries:
+  # Posters
+  - id: RandomPosterLegit
+    orGroup: content
+  - id: ExtinguisherCabinetFilled
+    prob: 0.2
+    orGroup: content
+  - id: RandomPainting
+    prob: 0.05
+    orGroup: content
+  - id: IntercomScience
+    prob: 0.1
     orGroup: content
