--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -1,17 +1,17 @@
-# Base dungeon prototypes
+# Wizden edited: Base configs
 - type: dungeonConfig
-  id: Everything
+  id: NFPlanetBase
   layers:
   - !type:PrefabDunGen
     presets:
-      - Bucket
-      - Wow
-      - SpaceShip
-      - Tall
+    - Bucket
+    - Wow
+    - SpaceShip
+    - Tall
 
   - !type:CorridorDunGen
     width: 3
-  
+
   - !type:DungeonEntranceDunGen
     count: 2
 
@@ -34,81 +34,6 @@
 
   - !type:CornerClutterDunGen
 
-  data:
-    entities:
-      Cabling: CableApcExtension
-      CornerWalls: WallReinforced
-      Walls: WallSolid
-    spawnGroups:
-      CornerClutter: NFBaseClutterNF
-      Entrance: NFBaseAirlock
-      EntranceFlank: NFBaseWindow
-      Junction: NFBaseAirlock
-      WallMounts: NFBaseWallMounts
-      Window: NFBaseWindow
-    tiles:
-      FallbackTile: FloorSteel
-    whitelists:
-      Rooms:
-        tags:
-        - NFCaveFactory
-        - NFLavaBrig
-        - NFNFLavaMercenary
-        - NFSalvageExperiment
-        - NFVirologyLab
-        - NFNFSalvageOutpost
-
-- type: entitySpawnEntry
-  id: NFBaseClutterNF
-  entries:
-  - id: PottedPlantRandom
-    amount: 1
-
-- type: entitySpawnEntry
-  id: NFBaseAirlock
-  entries:
-  - id: CableApcExtension
-  - id: AirlockGlassDungeon
-
-- type: entitySpawnEntry
-  id: NFBaseWindow
-  entries:
-  - id: GrilleDungeon
-  - id: WindowDungeon
-
-- type: entitySpawnEntry
-  id: NFBaseWallMounts
-  entries:
-    # Posters
-    - id: RandomPosterLegit
-      orGroup: content
-    - id: ExtinguisherCabinetFilled
-      prob: 0.2
-      orGroup: content
-    - id: RandomPainting
-      prob: 0.05
-      orGroup: content
-    - id: DefibrillatorCabinetFilled
-      prob: 0.1
-      orGroup: content
-
-# CaveFactory prototypes
-- type: dungeonConfig
-  id: NFCaveFactory
-  data:
-    colors:
-      Decals: "#ffa64d96"
-    spawnGroups:
-      WallMounts: NFCaveFactoryWallMounts
-    whitelists:
-      Rooms:
-        tags:
-          - NFCaveFactory
-
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
   - !type:CorridorDecalSkirtingDunGen
     cardinalDecals:
       South: BrickTileWhiteLineS
@@ -125,231 +50,6 @@
       SouthEast: BrickTileWhiteInnerSe
       NorthWest: BrickTileWhiteInnerNw
       NorthEast: BrickTileWhiteInnerNe
-
-- type: entitySpawnEntry
-  id: NFCaveFactoryWallMounts
-  entries:
-    # Posters
-    - id: RandomPosterLegit
-      orGroup: content
-    - id: ExtinguisherCabinetFilled
-      prob: 0.2
-      orGroup: content
-    - id: RandomPainting
-      prob: 0.05
-      orGroup: content
-
-# MedSci prototypes
-- type: dungeonConfig
-  id: NFMedSci
-  data:
-    spawnGroups:
-      WallMounts: NFMedSciWallMounts
-    whitelists:
-      Rooms:
-        tags:
-          - NFSalvageExperiment
-
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
-- type: entitySpawnEntry
-  id: NFMedSciWallMounts
-  entries:
-    - id: RandomPosterLegit
-      orGroup: content
-    - id: ExtinguisherCabinetFilled
-      prob: 0.2
-      orGroup: content
-    - id: RandomPainting
-      prob: 0.05
-      orGroup: content
-    - id: DefibrillatorCabinetFilled
-      prob: 0.2
-      orGroup: content
-
-# FactoryDorms prototypes
-- type: dungeonConfig
-  id: NFFactoryDorms
-  data:
-    whitelists:
-      Rooms:
-        tags:
-          - NFCaveFactory
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
-# NFLavaMercenary prototypes
-- type: dungeonConfig
-  id: NFLavaMercenary
-  data:
-    colors:
-      Decals: "#5E7C16"
-    entities:
-      Cabling: CableApcExtension
-      CornerWalls: WallReinforced
-      Walls: WallSolid
-    spawnGroups:
-      CornerClutter: NFBaseClutter
-      Entrance: NFMercenaryAirlock
-      EntranceFlank: NFBaseWindow
-      Junction: NFMercenaryAirlock
-      WallMounts: NFLavaMercenaryWallMounts
-      Window: NFBaseWindow
-    whitelists:
-      Rooms:
-        tags:
-          - NFLavaMercenary
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
-  - !type:CorridorDecalSkirtingDunGen
-    cardinalDecals:
-      South: BrickTileWhiteLineS
-      East: BrickTileWhiteLineE
-      North: BrickTileWhiteLineN
-      West: BrickTileWhiteLineW
-    cornerDecals:
-      SouthEast: BrickTileWhiteCornerSe
-      SouthWest: BrickTileWhiteCornerSw
-      NorthEast: BrickTileWhiteCornerNe
-      NorthWest: BrickTileWhiteCornerNw
-    pocketDecals:
-      SouthWest: BrickTileWhiteInnerSw
-      SouthEast: BrickTileWhiteInnerSe
-      NorthWest: BrickTileWhiteInnerNw
-      NorthEast: BrickTileWhiteInnerNe
-
-- type: entitySpawnEntry
-  id: NFMercenaryAirlock
-  entries:
-    - id: CableApcExtension
-    - id: AirlockMercenaryGlassDungeon
-
-- type: entitySpawnEntry
-  id: NFLavaMercenaryWallMounts
-  entries:
-    # Posters
-    - id: RandomPosterContraband
-      orGroup: content
-    - id: ExtinguisherCabinetFilled
-      prob: 0.2
-      orGroup: content
-    - id: RandomPainting
-      prob: 0.05
-      orGroup: content
-
-# VirologyLab prototypes
-- type: dungeonConfig
-  id: VirologyLab
-  data:
-    colors:
-      Decals: "#467b41"
-    spawnGroups:
-      Entrance: VirologyAirlockNF
-    whitelists:
-      Rooms:
-        tags:
-          - NFVirologyLab
-
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
-  - !type:CorridorDecalSkirtingDunGen
-    cardinalDecals:
-      South: BrickTileWhiteLineS
-      East: BrickTileWhiteLineE
-      North: BrickTileWhiteLineN
-      West: BrickTileWhiteLineW
-    cornerDecals:
-      SouthEast: BrickTileWhiteCornerSe
-      SouthWest: BrickTileWhiteCornerSw
-      NorthEast: BrickTileWhiteCornerNe
-      NorthWest: BrickTileWhiteCornerNw
-    pocketDecals:
-      SouthWest: BrickTileWhiteInnerSw
-      SouthEast: BrickTileWhiteInnerSe
-      NorthWest: BrickTileWhiteInnerNw
-      NorthEast: BrickTileWhiteInnerNe
-
-- type: entitySpawnEntry
-  id: VirologyAirlockNF
-  entries:
-    - id: CableApcExtension
-    - id: AirlockVirologyGlassDungeon
-
-# NFSalvageOutpost prototypes
-- type: dungeonConfig
-  id: NFSalvageOutpost
-  data:
-    colors:
-      Decals: "#9A54BF"
-    entities:
-      CornerWalls: WallMining
-      Walls: WallMining
-    spawnGroups:
-      Entrance: NFMiningAirlock
-      EntranceFlank: NFMiningWindow
-      Window: NFMiningWindow
-    whitelists:
-      Rooms:
-        tags:
-          - NFSalvageOutpost
-  layers:
-  - !type:PrototypeDunGen
-    proto: Everything
-
-  - !type:CorridorDecalSkirtingDunGen
-    cardinalDecals:
-      South: BrickTileWhiteLineS
-      East: BrickTileWhiteLineE
-      North: BrickTileWhiteLineN
-      West: BrickTileWhiteLineW
-    cornerDecals:
-      SouthEast: BrickTileWhiteCornerSe
-      SouthWest: BrickTileWhiteCornerSw
-      NorthEast: BrickTileWhiteCornerNe
-      NorthWest: BrickTileWhiteCornerNw
-    pocketDecals:
-      SouthWest: BrickTileWhiteInnerSw
-      SouthEast: BrickTileWhiteInnerSe
-      NorthWest: BrickTileWhiteInnerNw
-      NorthEast: BrickTileWhiteInnerNe
-
-- type: entitySpawnEntry
-  id: NFMiningAirlock
-  entries:
-    - id: CableApcExtension
-    - id: AirlockMiningGlassDungeon
-
-- type: entitySpawnEntry
-  id: NFMiningWindow
-  entries:
-    - id: GrilleDungeon
-    - id: MiningWindowDungeon
-
-## Wallmounts
-- type: entitySpawnEntry
-  id: NFNanoTrasenFacilityWallmounts
-  entries:
-  - id: RandomPosterLegit
-    orGroup: content
-  - id: ExtinguisherCabinetFilled
-    prob: 0.2
-    orGroup: content
-  - id: IntercomCommon
-    prob: 0.1
-    orGroup: content
-  - id: DefibrillatorCabinetFilled
-    prob: 0.05
-    orGroup: content
-
-
-# Wizden edited: Base configs
 
 # Setups
 - type: dungeonConfig
@@ -376,7 +76,7 @@
         - NFSalvageExperiment
   layers:
   - !type:PrototypeDunGen
-    proto: PlanetBase
+    proto: NFPlanetBase
 
 - type: dungeonConfig
   id: NFHaunted
@@ -435,14 +135,14 @@
         - NFLavaBrig
   layers:
   - !type:PrototypeDunGen
-    proto: Everything # Frontier: PlanetBase<Everything
+    proto: NFPlanetBase
 
 - type: dungeonConfig
   id: NFMineshaft
   data:
     entities:
-      Walls: WallRock # Frontier: enclose the mineshaft in rock
-      CornerWalls: WallRock # Frontier: CornerWalls: WallRock
+      Walls: WallRock
+      CornerWalls: WallRock
       Cabling: Catwalk
     spawnGroups:
       CornerClutter: NFMineshaftClutter
@@ -459,7 +159,7 @@
         - NFMineshaft
   layers:
   - !type:PrototypeDunGen
-    proto: Everything # Frontier: PlanetBase<Everything
+    proto: NFPlanetBase
 
 - type: dungeonConfig
   id: NFSnowyLabs
@@ -485,7 +185,7 @@
         - NFSnowyLabs
   layers:
   - !type:PrototypeDunGen
-    proto: PlanetBase
+    proto: NFPlanetBase
 
 # Spawn groups
 # Basic
@@ -494,6 +194,18 @@
   entries:
   - id: PottedPlantRandom
     amount: 1
+
+- type: entitySpawnEntry
+  id: NFBaseAirlock
+  entries:
+  - id: CableApcExtension
+  - id: AirlockGlassDungeon
+
+- type: entitySpawnEntry
+  id: NFBaseWindow
+  entries:
+  - id: GrilleDungeon
+  - id: WindowDungeon
 
 # Lava brig
 - type: entitySpawnEntry
@@ -575,3 +287,275 @@
   - id: IntercomScience
     prob: 0.1
     orGroup: content
+
+# CaveFactory prototypes
+- type: dungeonConfig
+  id: NFCaveFactory
+  data:
+    colors:
+      Decals: "#ffa64d96"
+    spawnGroups:
+      WallMounts: NFCaveFactoryWallMounts
+    whitelists:
+      Rooms:
+        tags:
+          - NFCaveFactory
+
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+  - !type:CorridorDecalSkirtingDunGen
+    cardinalDecals:
+      South: BrickTileWhiteLineS
+      East: BrickTileWhiteLineE
+      North: BrickTileWhiteLineN
+      West: BrickTileWhiteLineW
+    cornerDecals:
+      SouthEast: BrickTileWhiteCornerSe
+      SouthWest: BrickTileWhiteCornerSw
+      NorthEast: BrickTileWhiteCornerNe
+      NorthWest: BrickTileWhiteCornerNw
+    pocketDecals:
+      SouthWest: BrickTileWhiteInnerSw
+      SouthEast: BrickTileWhiteInnerSe
+      NorthWest: BrickTileWhiteInnerNw
+      NorthEast: BrickTileWhiteInnerNe
+
+- type: entitySpawnEntry
+  id: NFCaveFactoryWallMounts
+  entries:
+    # Posters
+    - id: RandomPosterLegit
+      orGroup: content
+    - id: ExtinguisherCabinetFilled
+      prob: 0.2
+      orGroup: content
+    - id: RandomPainting
+      prob: 0.05
+      orGroup: content
+
+# MedSci prototypes
+- type: dungeonConfig
+  id: NFMedSci
+  data:
+    spawnGroups:
+      WallMounts: NFMedSciWallMounts
+    whitelists:
+      Rooms:
+        tags:
+          - NFSalvageExperiment
+
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+- type: entitySpawnEntry
+  id: NFMedSciWallMounts
+  entries:
+    - id: RandomPosterLegit
+      orGroup: content
+    - id: ExtinguisherCabinetFilled
+      prob: 0.2
+      orGroup: content
+    - id: RandomPainting
+      prob: 0.05
+      orGroup: content
+    - id: DefibrillatorCabinetFilled
+      prob: 0.2
+      orGroup: content
+
+# FactoryDorms prototypes
+- type: dungeonConfig
+  id: NFFactoryDorms
+  data:
+    whitelists:
+      Rooms:
+        tags:
+          - NFCaveFactory
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+# NFLavaMercenary prototypes
+- type: dungeonConfig
+  id: NFLavaMercenary
+  data:
+    colors:
+      Decals: "#5E7C16"
+    entities:
+      Cabling: CableApcExtension
+      CornerWalls: WallReinforced
+      Walls: WallSolid
+    spawnGroups:
+      CornerClutter: NFBaseClutter
+      Entrance: NFMercenaryAirlock
+      EntranceFlank: NFBaseWindow
+      Junction: NFMercenaryAirlock
+      WallMounts: NFLavaMercenaryWallMounts
+      Window: NFBaseWindow
+    whitelists:
+      Rooms:
+        tags:
+          - NFLavaMercenary
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+  - !type:CorridorDecalSkirtingDunGen
+    cardinalDecals:
+      South: BrickTileWhiteLineS
+      East: BrickTileWhiteLineE
+      North: BrickTileWhiteLineN
+      West: BrickTileWhiteLineW
+    cornerDecals:
+      SouthEast: BrickTileWhiteCornerSe
+      SouthWest: BrickTileWhiteCornerSw
+      NorthEast: BrickTileWhiteCornerNe
+      NorthWest: BrickTileWhiteCornerNw
+    pocketDecals:
+      SouthWest: BrickTileWhiteInnerSw
+      SouthEast: BrickTileWhiteInnerSe
+      NorthWest: BrickTileWhiteInnerNw
+      NorthEast: BrickTileWhiteInnerNe
+
+- type: entitySpawnEntry
+  id: NFMercenaryAirlock
+  entries:
+    - id: CableApcExtension
+    - id: AirlockMercenaryGlassDungeon
+
+- type: entitySpawnEntry
+  id: NFLavaMercenaryWallMounts
+  entries:
+    # Posters
+    - id: RandomPosterContraband
+      orGroup: content
+    - id: ExtinguisherCabinetFilled
+      prob: 0.2
+      orGroup: content
+    - id: RandomPainting
+      prob: 0.05
+      orGroup: content
+
+# VirologyLab prototypes
+- type: dungeonConfig
+  id: VirologyLab
+  data:
+    colors:
+      Decals: "#467b41"
+    spawnGroups:
+      Entrance: VirologyAirlockNF
+    whitelists:
+      Rooms:
+        tags:
+          - NFVirologyLab
+
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+  - !type:CorridorDecalSkirtingDunGen
+    cardinalDecals:
+      South: BrickTileWhiteLineS
+      East: BrickTileWhiteLineE
+      North: BrickTileWhiteLineN
+      West: BrickTileWhiteLineW
+    cornerDecals:
+      SouthEast: BrickTileWhiteCornerSe
+      SouthWest: BrickTileWhiteCornerSw
+      NorthEast: BrickTileWhiteCornerNe
+      NorthWest: BrickTileWhiteCornerNw
+    pocketDecals:
+      SouthWest: BrickTileWhiteInnerSw
+      SouthEast: BrickTileWhiteInnerSe
+      NorthWest: BrickTileWhiteInnerNw
+      NorthEast: BrickTileWhiteInnerNe
+
+- type: entitySpawnEntry
+  id: VirologyAirlockNF
+  entries:
+    - id: CableApcExtension
+    - id: AirlockVirologyGlassDungeon
+
+# NFSalvageOutpost prototypes
+- type: dungeonConfig
+  id: NFSalvageOutpost
+  data:
+    colors:
+      Decals: "#9A54BF"
+    entities:
+      CornerWalls: WallMining
+      Walls: WallMining
+    spawnGroups:
+      Entrance: NFMiningAirlock
+      EntranceFlank: NFMiningWindow
+      Window: NFMiningWindow
+    whitelists:
+      Rooms:
+        tags:
+          - NFSalvageOutpost
+  layers:
+  - !type:PrototypeDunGen
+    proto: NFPlanetBase
+
+  - !type:CorridorDecalSkirtingDunGen
+    cardinalDecals:
+      South: BrickTileWhiteLineS
+      East: BrickTileWhiteLineE
+      North: BrickTileWhiteLineN
+      West: BrickTileWhiteLineW
+    cornerDecals:
+      SouthEast: BrickTileWhiteCornerSe
+      SouthWest: BrickTileWhiteCornerSw
+      NorthEast: BrickTileWhiteCornerNe
+      NorthWest: BrickTileWhiteCornerNw
+    pocketDecals:
+      SouthWest: BrickTileWhiteInnerSw
+      SouthEast: BrickTileWhiteInnerSe
+      NorthWest: BrickTileWhiteInnerNw
+      NorthEast: BrickTileWhiteInnerNe
+
+- type: entitySpawnEntry
+  id: NFMiningAirlock
+  entries:
+    - id: CableApcExtension
+    - id: AirlockMiningGlassDungeon
+
+- type: entitySpawnEntry
+  id: NFMiningWindow
+  entries:
+    - id: GrilleDungeon
+    - id: MiningWindowDungeon
+
+## Wallmounts
+- type: entitySpawnEntry
+  id: NFNanoTrasenFacilityWallmounts
+  entries:
+  - id: RandomPosterLegit
+    orGroup: content
+  - id: ExtinguisherCabinetFilled
+    prob: 0.2
+    orGroup: content
+  - id: IntercomCommon
+    prob: 0.1
+    orGroup: content
+  - id: DefibrillatorCabinetFilled
+    prob: 0.05
+    orGroup: content
+
+- type: entitySpawnEntry
+  id: NFBaseWallMounts
+  entries:
+    # Posters
+    - id: RandomPosterLegit
+      orGroup: content
+    - id: ExtinguisherCabinetFilled
+      prob: 0.2
+      orGroup: content
+    - id: RandomPainting
+      prob: 0.05
+      orGroup: content
+    - id: DefibrillatorCabinetFilled
+      prob: 0.1
+      orGroup: content
