--- a/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
+++ b/Resources/Prototypes/_NF/Procedural/dungeon_configs.yml
@@ -440,12 +440,12 @@
 
 # VirologyLab prototypes
 - type: dungeonConfig
-  id: VirologyLab
+  id: NFVirologyLab
   data:
     colors:
       Decals: "#467b41"
     spawnGroups:
-      Entrance: VirologyAirlockNF
+      Entrance: NFVirologyAirlock
     whitelists:
       Rooms:
         tags:
@@ -473,7 +473,7 @@
       NorthEast: BrickTileWhiteInnerNe
 
 - type: entitySpawnEntry
-  id: VirologyAirlockNF
+  id: NFVirologyAirlock
   entries:
     - id: CableApcExtension
     - id: AirlockVirologyGlassDungeon
