--- a/Resources/Prototypes/_NF/Procedural/Themes/wreck.yml
+++ b/Resources/Prototypes/_NF/Procedural/Themes/wreck.yml
@@ -181,7 +181,7 @@
 - type: entity
   id: NFWreckRoomMarker
   parent: BaseRoomMarker
-  name: NFWreck room marker
+  name: wreck room marker
   components:
   - type: RoomFill
     roomWhitelist:
