--- a/Resources/Prototypes/_NF/Procedural/salvage_mods.yml
+++ b/Resources/Prototypes/_NF/Procedural/salvage_mods.yml
@@ -18,7 +18,7 @@
 - type: salvageDungeonMod
   id: NFMedSci
   desc: salvage-dungeon-mod-med-sci
-  proto: MedSci
+  proto: NFMedSci
   biomes:
     - Caves
     - Grasslands
