--- a/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
@@ -67,7 +67,7 @@
         - id: NFSalvageMobSpawner
           prob: 0.1
         # Room
-        - id: WreckRoomMarker
+        - id: NFWreckRoomMarker
           prob: 0.01
       Plating: *floor
       Lattice:
